<resources>
    <string name="escreva_seu_nome">Escreva seu Nome</string>
    <string name="registre_se">Registre-se</string>
    <string name="escreva_seu_sobrenome">Escreva seu SobreNome</string>
    <string name="escreva_sua_senha">Escreva sua Senha</string>
    <string name="escreva_seu_e_mail">Escreva seu E-mail</string>
    <string name="coloque_a_senha">Coloque a senha</string>
    <string name="coloque_seu_e_mail">Coloque seu E-mail</string>
    <string name="entrei">Entrar</string>
    <string name="image">image</string>
    <string name="title_activity_photo">Photo</string>
    <string name="back">back</string>
    <string name="button">Button</string>
    <string name="nome_do_funcion_rio">Nome do funcionário:</string>
    <string name="j_tenho_cadastro">Já tenho cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="placa_do_veiculo">Placa do Veiculo</string>
    <string name="tirar_foto_da_avaria">Tirar Foto da Avaria do Caminhão</string>
    <string name="insert_image">Inserir Imagem</string>
    <string name="txttriangule">Name</string>
    <string name="txtRodas">Name</string>
    <string name="txtTaco">Name</string>
    <string name="txttapetes">Name</string>
    <string name="txtAco">Name</string>
    <string name="txtCatracas">Name</string>
    <string name="txtmovel">Name</string>
    <string name="txtQts">Name</string>
    <string name="txtSuporte">Name</string>
    <string name="SupGrande">Name</string>
    <string name="quantidade_de_chaves">Quantidade de Chaves</string>
    <string name="suporte_pequeno_de_emerg_ncia">Suporte pequeno de emergência</string>
    <string name="suporte_grande_de_emerg_ncia">Suporte grande de emergência</string>
    <string name="catraca_m_vel">Catraca Móvel</string>
    <string name="cabo_de_a_o">Cabo de Aço</string>
    <string name="catracas">Catracas</string>
    <string name="tac_grafo">Tacógrafo</string>
    <string name="tapetes">Tapetes</string>
    <string name="chave_de_rodas">Chave de Rodas</string>
    <string name="tri_ngulo">Triângulo</string>
    <string name="txtmacaco">Name</string>
    <string name="txtferroMac">Name</string>
    <string name="macaco">Macaco</string>
    <string name="ferro_do_macaco">Ferro do Macaco</string>
    <string name="quantidade_original">Quantidade Original</string>
    <string name="quantidade_no_veiculo1">Quantidade no veiculo</string>
    <string name="selecionar">Selecionar</string>
    <string name="placa_veiculo">Digite a placa do veículo</string>
    <string name="veiculo">Digite o veículo</string>
    <string name="btnAdd">Adicionar</string>
    <string name="btnView">Visualizar Veículos Cadastrados</string>
    <string name="veiculos">veiculos.db</string>
    <string name="cadastroveiculo">cadastroVeiculo</string>
    <string name="plveiculo">plveiculo</string>
    <string name="bttn">ButtonCadastra</string>
    <string name="Modified">Modificar</string>
    <string name="LogIn">Cadastrar</string>
    <string name="cadastrardon">Cadastrar</string>
    <string name="consultando">Consulta</string>
    <string name="_1">1</string>
    <string name="anexar_arquivo_ou_imagem">Anexar Arquivo ou Imagem</string>
    <string name="digite_o_email_que_deseja_enviar">Digite o Email que deseja enviar!</string>
    <string name="coloque_o_dia_que_foi_realizado_o_checklist">Coloque o dia que foi realizado o Checklist</string>
    <string name="escreva_se_h_novas_avarias">Escreva se há novas avarias...</string>
    <string name="enviar_mensagem">Enviar Mensagem</string>
    <string name="escreva_se_h_avarias_novos_e_mande_as_fotos_depois_de_clicar_enviar_cloque_as_fotos_em_anexo">Escreva se há avarias novos e mande as fotos depois de clicar enviar, cloque as fotos em anexo...</string>
    <string-array name="titles_tab">
        <item>Parte_1</item>
        <item>Parte_2</item>
        <item>Parte_3</item>
    </string-array>
    <string name="navigation_drawer_open">Abrir Navegação</string>
    <string name="navigation_drawer_close">Fechar Navegação</string>
    <string name="consultar" />
    <string name="nenhum_dado">Nenhum dado...</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="digite_a_placa_do_veiculo">Digite a placa do Veiculo</string>
    <string name="consultar_1">Consultar</string>
    <string name="add_imagem">Add Imagem</string>
    <string name="c_digo_do_produto">Código do Produto</string>
    <string name="c_digo">Código</string>
    <string name="ip3">http://transcr10-com.umbler.net</string>
    <string name="ip2">http://transcr10.com</string>
    <string name="ip">http://transcr.000webhostapp.com</string>

    <string name="frotas">Frotas</string>
    <string name="consultar_frota">Consultar Frota</string>
    <string name="consultar_lista_de_frotas">Consultar lista de Frotas</string>
    <string name="lista_de_frotas_imagem">Lista de Frotas Imagem</string>
    <string name="todo1">TODO1</string>
    <string name="inserir_ficha_de_vistoria">Inserir Ficha de Vistoria</string>
    <string name="taco_grafo">Tacógrafo</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="lembrar_email_cadastrado">Lembrar email cadastrado</string>
    <string-array name="pneus_obs">
        <item>Novo</item>
        <item>Bom</item>
        <item>Regular</item>
        <item>Danificado</item>
    </string-array>
</resources>
