<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    tools:context="com.example.transcr.login">


    <EditText
        android:id="@+id/txtemail"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="#E6E5E5"
        android:ems="10"
        android:hint="@string/coloque_seu_e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327"
        tools:ignore="MissingConstraints"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtsenha"
        android:layout_width="224dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:background="#E6E5E5"
        android:ems="10"
        android:hint="@string/coloque_a_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtemail"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="276dp"
        android:background="#FF9800"
        android:drawableEnd="@android:drawable/ic_menu_send"
        android:drawableRight="@android:drawable/ic_menu_send"
        android:text="@string/entrei"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsenha"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="221dp"
        android:layout_marginRight="221dp"
        android:layout_marginBottom="22dp"
        android:checked="true"
        android:text="@string/lembrar_email_cadastrado"
        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsenha"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>